--- a/KT_1/View/AuthorizationWindow.xaml
+++ b/KT_1/View/AuthorizationWindow.xaml
@@ -17,9 +17,9 @@
 
         <TextBlock TextAlignment="Center" FontSize="24" Margin="0,0,0,30">Вход</TextBlock>
 
-        <TextBox ></TextBox>
-        <TextBox></TextBox>
+        <TextBox Text="{Binding Login}"></TextBox>
+        <TextBox Text="{Binding Password}"></TextBox>
 
-        <Button Height="30" Margin="0,30,0,0">Вход</Button>
+        <Button Height="30" Margin="0,30,0,0" Command="{Binding AuthCommand}">Вход</Button>
     </StackPanel>
 </Window>
