--- a/KT_1/View/AuthorizationWindow.xaml
+++ b/KT_1/View/AuthorizationWindow.xaml
@@ -10,7 +10,7 @@
         <StackPanel.Resources>
             <Style TargetType="TextBox">
                 <Setter Property="MinWidth" Value="300"></Setter>
-                <Setter Property="Height" Value="30"></Setter>
+                <Setter Property="Padding" Value="6"></Setter>
                 <Setter Property="Margin" Value="0,10"></Setter>
             </Style>
         </StackPanel.Resources>
