--- a/KT_1/View/AuthorizationWindow.xaml
+++ b/KT_1/View/AuthorizationWindow.xaml
@@ -6,9 +6,11 @@
         xmlns:local="clr-namespace:KT_1.View"
         xmlns:converters="clr-namespace:KT_1.Converters"
         mc:Ignorable="d"
-        Title="AuthorizationWindow" Height="450" Width="800"
+        Title="Вход" 
+        MinHeight="305" MinWidth="360"
+        Height="400" Width="650"
         Visibility="{Binding WindowVisibility}">
-    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20,0">
         <StackPanel.Resources>
             <Style TargetType="TextBox">
                 <Setter Property="MinWidth" Value="300"></Setter>
