--- a/KT_1/View/RegistrationWindow.xaml
+++ b/KT_1/View/RegistrationWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:KT_1.View"
         xmlns:converters="clr-namespace:KT_1.Converters"
         mc:Ignorable="d"
-        Title="RegistrationWindow" Height="500" Width="800">
+        Title="Создание аккаунта" 
+        MinHeight="500" MinWidth="395"
+        Height="500" Width="400">
     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
         <StackPanel.Resources>
             <Style TargetType="TextBox">
