--- a/KT_1/View/Pages/AccessoriesAccounting.xaml
+++ b/KT_1/View/Pages/AccessoriesAccounting.xaml
@@ -13,7 +13,7 @@
             <RowDefinition></RowDefinition>
             <RowDefinition Height="30"></RowDefinition>
         </Grid.RowDefinitions>
-        <DataGrid ItemsSource="{Binding Accessories}">
+        <DataGrid ItemsSource="{Binding Accessories}" AutoGenerateColumns="False" CanUserReorderColumns="True" CanUserDeleteRows="False" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Артикул" Binding="{Binding Articul}"></DataGridTextColumn>
                 <DataGridTextColumn Header="Имя" Binding="{Binding Name}"></DataGridTextColumn>
@@ -21,7 +21,6 @@
                 <DataGridTextColumn Header="Ширина" Binding="{Binding Width}"></DataGridTextColumn>
                 <DataGridTextColumn Header="Высота" Binding="{Binding Height}"></DataGridTextColumn>
                 <DataGridTextColumn Header="Цена" Binding="{Binding Price}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Рисунок" Binding="{Binding Texture}"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
         
