--- a/KT_1/View/UserControls/NavigationBar.xaml
+++ b/KT_1/View/UserControls/NavigationBar.xaml
@@ -6,11 +6,92 @@
              xmlns:local="clr-namespace:KT_1.View.UserControls"
              mc:Ignorable="d"
              Name="uc">
+    <UserControl.Resources>
+        <Style x:Key="MenuTextStyle" TargetType="{x:Type TextBlock}">
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
+
+            <!--to change fore ground on MouseOver and Menu Item Selection-->
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ToggleButton}}" Value="True">
+                    <Setter Property="Foreground" Value="#515EC1"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding IsChecked, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ToggleButton}}" Value="True">
+                    <Setter Property="Foreground" Value="#515EC1"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListBoxItem}}" Value="True">
+                    <Setter Property="Foreground" Value="#515EC1"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding IsSelected, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListBoxItem}}" Value="True">
+                    <Setter Property="Foreground" Value="#515EC1"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="MenuButtonStyle" TargetType="{x:Type ToggleButton}">
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Focusable" Value="False"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ToggleButton}">
+                        <Border Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <!--Adding Icon & Text in our Button-->
+                            <Grid Margin="5,0,5,0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+
+                                <!--#region Menu Icon-->
+                                <Grid Width="30">
+
+                                    <!--#region Optional Hide/Show Menu Icon-->
+                                    <Grid.Style>
+                                        <Style TargetType="{x:Type Grid}">
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding HasIcon, ElementName=this, TargetNullValue=False, FallbackValue=False}" Value="False">
+                                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Grid.Style>
+                                    <!--#endregion-->
+
+                                    <Path Stretch="Uniform"
+                                          Height="17"
+                                          Width="18"
+                                          Fill="#515EC1"/>
+                                </Grid>
+                                <!--#endregion-->
+
+                                <!--Menu Text-->
+                                <TextBlock Style="{StaticResource MenuTextStyle}" Grid.Column="1" Text="{TemplateBinding Content}"/>
+
+                            </Grid>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <!--setting default selection to dashboard button on Application startup-->
+                            <Trigger Property="Content" Value="Dashboard">
+                                <Setter Property="IsChecked" Value="True"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
     <ItemsControl ItemsSource="{Binding ElementName=uc, Path=Items}">
         <ItemsControl.ItemTemplate>
             <DataTemplate>
                 <StackPanel>
-                    <RadioButton Content="{Binding Title}" Command="{Binding ClickCommand}" Tag="{Binding PageUri}" Checked="RadioButton_Checked"></RadioButton>
+                    <RadioButton Style="{StaticResource MenuButtonStyle}" Content="{Binding Title}" Command="{Binding ClickCommand}" Tag="{Binding PageUri}" Checked="RadioButton_Checked" GroupName="Menu"></RadioButton>
                 </StackPanel>
             </DataTemplate>
         </ItemsControl.ItemTemplate>
